--- a/package.json
+++ b/package.json
@@ -7,25 +7,32 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
+    "prepare": "husky",
     "lint": "eslint src --fix",
-    "lint:style": "stylelint --fix \"src/**/*.{css,less,vue}\""
+    "lint:style": "stylelint --fix \"src/**/*.{css,less,vue}\"",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.4.0",
     "@stylistic/stylelint-plugin": "^2.1.2",
     "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
+    "commitlint": "^19.3.0",
     "eslint": "^9.4.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "eslint-plugin-vue": "^9.26.0",
     "globals": "^15.3.0",
+    "husky": "^9.0.11",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.5",
     "postcss-html": "^1.7.0",
     "postcss-less": "^6.0.0",
     "prettier": "^3.3.1",
@@ -42,5 +49,13 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^5.3.1",
     "vue-tsc": "^2.0.6"
+  },
+  "lint-staged": {
+    "**/*.{vue,js,ts}": [
+      "eslint --fix"
+    ],
+    "**/*.{vue,css,less}": [
+      "stylelint --fix"
+    ]
   }
 }
